--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Hello World</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, Ciclano</p>
+
+    </header>  
+
+    <section>
+        <h2>HTML</h2>
+        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
+
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (em português, Folhas de Estilo em Cascata) cria estilos personalizados da sua página web</p>
+        <img src="imagem/Olá mundo.png" alt="Imagem com figuras geométricas ao fundo e uma figura do planeta Terraa frente, com a inscrição Olá Mundo em letras coloridas">
+    </section>
+
+    <footer>
+    <p>Uma página desenvolvida por Prof. Filipe + Alura</p>
+
+    </footer>
+
 </body>
 </html>
