--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <p>Uma página desenvolvida por Prof. Filipe + Alura</p>
 
     </footer>
-
+    <script src="main.js"></script>
 </body>
 </html>
